Archive2/be/051a8fd5907201/main.cpp
#include <memory>
#include <iostream>
int main()
{
    std::unique_ptr<int> i;
    std::cout << (i == false) << std::endl;
}
    